--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,15 +40,8 @@
     max-width: 325px;
 }
 
-.price-main-box {
-    width: fit-content;
-    padding: 35px;
-    border: 10px solid yellow;
-    border-radius: 50%;
-}
-
 .black-layer {
-    width: 500px;
+    width: 100%;
     background: black;
     height: 136px;
     bottom: -11px;
@@ -63,83 +56,154 @@
     color: #4D4D4D;
 }
 
-.txt-1 {
-    top: 82%;
-    left: -14%;
+.timeline {
+    position: relative;
+    height: fit-content;
 }
 
-.txt-5 {
-    top: 82%;
-    right: -14%;
-}
-
-.txt-5::after {
+.timeline::after {
     content: '';
     position: absolute;
-    top: -48px;
-    left: 9px;
-    height: 10px;
-    width: 25px;
+    width: 6px;
     background-color: white;
-    transform: rotate(27deg);
+    top: 16px;
+    bottom: 0;
+    left: 6%;
+    margin-left: -5px;
+    height: 80%;
 }
 
-.txt-1::after {
+.txt {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+.txt::after {
     content: '';
     position: absolute;
-    top: -48px;
-    right: 37px;
-    height: 10px;
     width: 25px;
-    background-color: white;
-    transform: rotate(-21deg);
-}
-
-.txt-2 {
-    left: -104px;
-    top: 9%;
-}
-
-.txt-2::after {
-    content: '';
-    position: absolute;
-    top: 27px;
-    right: -35px;
-    height: 10px;
-    width: 25px;
-    background-color: white;
-    transform: rotate(32deg);
-}
-
-.txt-4 {
-    right: -104px;
-    top: 9%;
-}
-
-.txt-4::after {
-    content: '';
-    position: absolute;
-    top: 29px;
-    left: -55px;
-    height: 35px;
-    width: 35px;
-    background-color: #e76e6e;
-    transform: rotate(-32deg);
+    height: 25px;
+    right: -17px;
+    background-color: yellow;
+    top: 15px;
     border-radius: 50%;
-    border: 9px solid white;
+    z-index: 1;
 }
 
-.txt-3 {
-    top: -73px;
+.left {
+    left: 0;
 }
 
-.txt-3::after {
-    content: '';
-    position: absolute;
-    top: 63px;
-    left: 46px;
-    height: 9px;
-    width: 25px;
-    background-color: white;
-    transform: rotate(90deg);
+.right {
+    left: 6%;
+}
+
+
+.right::after {
+    left: -14px;
+}
+
+.min-vh-75 {
+    min-height: 75vh;
+}
+
+.content {
+    margin-bottom: 35px;
+}
+
+@media (min-width: 992px) {
+
+    .position-lg-absolute {
+        position: absolute;
+    }
+
+    .txt-1 {
+        top: 82%;
+        left: -14%;
+    }
+
+    .txt-5 {
+        top: 82%;
+        right: -14%;
+    }
+
+    .txt-5::after {
+        content: '';
+        position: absolute;
+        top: -48px;
+        left: 9px;
+        height: 10px;
+        width: 25px;
+        background-color: white;
+        transform: rotate(27deg);
+    }
+
+    .txt-1::after {
+        content: '';
+        position: absolute;
+        top: -48px;
+        right: 37px;
+        height: 10px;
+        width: 25px;
+        background-color: white;
+        transform: rotate(-21deg);
+    }
+
+    .txt-2 {
+        left: -104px;
+        top: 9%;
+    }
+
+    .txt-2::after {
+        content: '';
+        position: absolute;
+        top: 27px;
+        right: -35px;
+        height: 10px;
+        width: 25px;
+        background-color: white;
+        transform: rotate(32deg);
+    }
+
+    .txt-4 {
+        right: -104px;
+        top: 9%;
+    }
+
+    .txt-4::after {
+        content: '';
+        position: absolute;
+        top: 29px;
+        left: -55px;
+        height: 35px;
+        width: 35px;
+        background-color: #e76e6e;
+        transform: rotate(-32deg);
+        border-radius: 50%;
+        border: 9px solid white;
+    }
+
+    .txt-3 {
+        top: -73px;
+    }
+
+    .txt-3::after {
+        content: '';
+        position: absolute;
+        top: 63px;
+        left: 46px;
+        height: 9px;
+        width: 25px;
+        background-color: white;
+        transform: rotate(90deg);
+    }
+
+    .price-main-box {
+        width: fit-content;
+        padding: 35px;
+        border: 10px solid yellow;
+        border-radius: 50%;
+    }
 }
